# prototypes

./: .gitmodules  LICENSE
cppdot/: CMakeLists.txt  chainspec.cpp  chainspec.hpp  main.cpp
cppdot/cmake/: packages.cmake
cppdot/common/: buffer.cpp  buffer.hpp  hexutil.hpp  outcome.hpp
cppdot/primitives/: authority.hpp  babe_configuration.hpp  scheduled_change.hpp
cppdot/scale/: scale.hpp  scale_decoder_stream.hpp  scale_encoder_stream.hpp  scale_error.hpp  types.hpp
cppdot/scale/detail/: fixed_width_integer.hpp
cppdot/test/: CMakeLists.txt  test.cpp  test_wasmedge.cpp  test_wasmedge_comp.cpp  test_wasmedge_host.cpp  trie.cpp  wasm.cpp  wasmedge.cpp
cppdot/test/wasm/: executor.h  wasm.h
cppdot/test/wasmedge/: host_api.h  memory.h  reg.h  utils.h
cppdot/trie/: trie.hpp
grpc/: CMakeLists.txt  GrpcTestClient.cxx  GrpcTestServer.cxx  README.md  build.ps1  pom.xml  server.crt
grpc/cmake/: grpc.cmake  packages.cmake
grpc/server/: pom.xml
grpc/server/src/main/java/org/example/: GrpcServer.java
grpc/serverb/: pom.xml
grpc/serverb/src/main/java/org/example/: GrpcServerApplication.java  GrpcServerConfiguration.java  GrpcService.java
grpc/serverb/src/main/resources/: application.yml  server.key
grpc/service/: pom.xml
grpc/service/src/main/proto/: plotter.proto
js-keycloak/: README.md  index.html  keycloak.json
prometheus/: CMakeLists.txt  handler.h  httplistener.cpp  httplistener.h  httpsession.cpp  httpsession.h  listener.h  metricshandler.cpp  metricshandler.h  prometheus.cpp  session.h
prometheus/cmake/: packages.cmake
serde/: CMakeLists.txt  README.md  conanfile.txt  serde-test.cpp  serde.hpp
use_soralog/: CMakeLists.txt  main.cpp  use_soralog
vue-keycloak/: README.md  package.json
vue-keycloak/src/: main.js
